# fast-api-azure-functions

./: README.md  pyproject.toml  requirements.txt
my_first_function/: __init__.py  function.json  run.sh
