[tool.poetry]
name = "myfirstapp"
version = "0.1.0"
description = ""
authors = ["christianbomholt <chr.bomholt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
azure-functions = "^1.6.0"
fastapi = "^0.63.0"
mangum = "^0.10.0"
bonnette = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
